labs3/files/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-demo-service
spec:
  selector:
    app: flask-demo
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
